week8/css/style.css
/* ... */
/* Existing styles for .main-content-grid */
.main-content-grid {
    display: grid;
    grid-template-columns: 2fr 1fr; /* Adjusted column sizes */
    gap: 20px;
    align-items: center;
    justify-content: flex-start;
    margin-top: -10px;
    overflow: hidden;
}

.main-content-grid > * {
    clip-path: inset(0 100% 0 0);
}

/* Progressive reveal animation */
@keyframes progressiveReveal {
    to {
        clip-path: inset(0 0 0 0);
    }
}

/* Apply the animation to each direct child of .main-content-grid */
.main-content-grid > * {
    animation: progressiveReveal 3s ease-out forwards;
}

/* Specific delays for each child to create a staggered effect */
.main-content-grid > *:nth-child(1) {
    animation-delay: 1.5s;
}
.main-content-grid > *:nth-child(2) {
    animation-delay: 3s;
}
.image-container {
    border-radius: 15px;
    display: flex;
    align-items: center;
    justify-content: center;
    object-fit: contain;
}

.right-side-image {
    width: auto;
    height: auto;
    object-fit: contain;
    background-color: #000;
    margin-top: 40px;
}

/* Responsive adjustments for smaller screens */
@media (max-width: 1268px) {
    .main-content-grid {
        display: flex; 
        flex-direction: column;
        justify-content: center; 
        align-items: center; 
        text-align: center;
        min-height: 100vh;
    }

    .text-container, .image-container {
        padding: 0px;
        margin-bottom: 0;
    }
}

/*End of Home Section*/


/* About Section */
:root {
    --header-color: #3a86ff;
    --text-color: #dddddd;
    --font-family: 'Roboto', sans-serif;
  }

#about strong {
    color: #94b4c6;
}

#about {
    color: white;
    min-height: 100vh;
    place-items: center;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    overflow: hidden;
    clip-path: inset(0 100% 0 0);
    animation: revealFlipCard 2s ease-out forwards;
    animation-delay: 1.5s;
  }

  .about-grid {
    display: grid;
    position: relative;
    grid-template-columns: repeat(4, 1fr);
    gap: 30px;
    text-align: left;
    padding: 0 20px;
    margin: auto;
    max-width: calc(100% - 40px);
    align-items: start;
}

.custom-button {
    position: absolute;
    top: 75%;
    left: 50%; 
    transform: translate(-50%, -50%);
    padding: 15px 20px;
    background-color: #132633;
    text-shadow: 2px 2px 5px #000; 
    text-decoration: none;
    border-radius: 15px;
    font-size: 25px;
    box-shadow: 5px 5px 10px #b38f46;
    cursor: pointer;
    color: #fff;
    overflow: hidden; 
    border: none;
}

.custom-button::after {
    content: ""; 
    position: absolute;
    top: 0; 
    left: 0;
    width: 0;
    height: 100%; 
    background-color: #343b4a;
    transition: width 0.7s ease-in-out; 
    z-index: -1;
}

.custom-button:hover::after {
    width: 100%;
    color: #94b4c6;
}

/* The Modal (background) */
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    padding-top: 100px;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0,0,0,0.6);
}

/* The Modal (background) */
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    padding-top: 100px;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0,0,0,0.6);
}

/* Modal Content */
.modal-content {
    background-color: #0a0a0a;
    margin: auto;
    padding: 20px;
    border-radius: 15px;
    width: 80%;
    min-height: 80%;
    display: flex; 
    flex-direction: column; 
    align-items: center; 
}

.modal-header {
    width: 100%; 
    display: flex; 
    justify-content: space-between; 
}

.modal-content p {
    font-size: 1.6em;
}

/* The Close Button */
.close {
    color: #fff;
    position: absolute;
    top: 12%;
    right: 11%;
    font-size: 2.2em;
}

.close:hover,
.close:focus {
    color: #b38f46;
    text-decoration: none;
    cursor: pointer;
}

.video-container {
    width: 100%; 
    display: grid;
    grid-template-columns: repeat(3, 1fr); 
    gap: 20px;
    justify-items: stretch; 
}

.video-container video {
    width: 100%;
    height: 60%;
}

.video-container div p {
    margin-bottom: 10px;
    font-size: 1.4em;
    text-align: center;
}
  
.about-header {
    text-align: center;
    font-size: 2.5em;
    color: #b38f46;
    text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.8);
    clip-path: inset(0 100% 0 0);
    animation: revealFlipCard 2s ease-out forwards;
    animation-delay: 1.5s;
}

.about-description, .about-list {
    font-size: 1.2em;
    line-height: 1.3;
    margin: 0px;
    color: #fff;
    font-family: 'Roboto', sans-serif;
    clip-path: inset(0 100% 0 0);
    animation: revealFlipCard 2s ease-out forwards;
    animation-delay: 1.5s;
}

.ol-about-list {
    list-style-type: decimal;
    font-size: 1.2em;
    font-family: 'Roboto', sans-serif;
    clip-path: inset(0 100% 0 0);
    animation: revealFlipCard 2s ease-out forwards;
    animation-delay: 1.5s;
}


.about-list {
    list-style-type: disc;
    text-align: left;
    font-size: 1.2em;
}

.about-grid > div:not(.quote-container) {
    background-color: rgba(0, 0, 0, 0.5);
    padding: 20px;
    border-radius: 20px;
    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
    margin-top: 20px;
    margin-bottom: 20px;
}

.about-grid > div:not(.quote-container):hover {
    transform: scale(1.10);
}

/* Progressive reveal animation */
@keyframes revealContent {
    to {
        clip-path: inset(0 0 0 0);
    }
}

.about-grid > div {
    animation: revealContent 3s ease-out forwards;
}

.about-grid > div:nth-child(1) {
    animation-delay: 1.5s;
}
.about-grid > div:nth-child(2) {
    animation-delay: 1.5s;
}
.about-grid > div:nth-child(3) {
    animation-delay: 1.5s;
}
.about-grid > div:nth-child(4) {
    animation-delay: 1.5s;
}
/* ... */

